CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.19

	- The cups-lpd mini-daemon now sends jobs to the default
	  queue when an empty queue name (or "lp" and there is
	  no "lp" queue) is sent.
	- The scheduler now supports fax queues identified by a
	  "*cupsFax: True" attribute in the PPD file. When a job
	  can't be sent, it is held for 5 minutes while other
	  jobs are attempted.
	- The scheduler now preserves the default options of PPD
	  files when modifying/upgrading an existing PPD file.
	  When installing a new printer, the scheduler sets the
	  default media size to Letter or A4 as appropriate for
	  your locale.
	- The scheduler no longer limits the number of
	  BrowseAddress, BrowsePoll, BrowseRelay, Listen, Port,
	  SSLListen, and SSLPort directives to 10.
	- The scheduler now supports print files that have been
	  compressed using gzip.
	- The scheduler used the stdio functions to read any job
	  ticket information in a PostScript print job. Since
	  some platforms limit the number of stdio files to 256,
	  job ticket information was ignored when the server had
	  a large number of clients connected to the system.
	- Filters and backends may now report the total number
	  of pages ("PAGE: total NNN") to the scheduler.
	- The LPD backend now supports timeout and
	  sanitize_title options (default to 300 and yes,
	  respectively) and has some additional changes to
	  reduce the chances of multiple copies being printed
	  when only one copy was requested.
	- Fixed a polygon drawing bug in the HP-GL/2 filter.
	- Added a robots.txt file to the standard install to
	  prevent search engines from indexing the CUPS server.
	- Added support for STATE: messages
	  (printer-state-reasons), printer-state-history, and
	  printer-state-time to the scheduler.
	- When using RunAsUser, the scheduler would initially
	  start any previously queued (pending) jobs with
	  RunAsUser disabled - all backends would be running as
	  root.